--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules index.ts"
+    "start": "ts-node-dev --transpile-only --ignore-watch node_modules index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,12 +18,10 @@
   },
   "homepage": "https://github.com/arthur-mp/MVP#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-generator": "^4.16.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "nodemon": "^2.0.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
