--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modules index.ts"
+    "start": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
   },
   "repository": {
     "type": "git",
