--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mvp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
+    "start": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/arthur-mp/MVP#readme",
   "dependencies": {
+    "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
